syntax = "proto3";

package AuditLog;

service AuditLog {
    rpc AuditLogDetail(Request) returns (AuditLogResponse) {}
    rpc AuditLogShow(Request) returns (LogShowResponse) {}
}

message Request {
    int32   id = 9;
    int32  uid = 11;
    string name = 1;
    string type = 2;
    string value = 3;
    string create_time = 4;
    string update_time = 5;
    int32  is_delete = 6;
    int32  page = 7;
    int32  page_size = 8;
    string reason = 12;
    int32  status = 13;
    string works_id = 14;
    repeated int32 ids = 10;
}

message AuditLogBracket{
    int32   id = 1;
    int32   uid = 2;
    string   works_id = 3;
    string   reason = 4;
    string   type = 5;
    string   create_time = 6;
}

message LogShowResponse {
    AuditLogBracket data = 1;
    int32 affectedRows = 2;
    int32 total = 3;
}

message AuditLogResponse {
    repeated AuditLogBracket data = 12;
    int32 affectedRows = 11;
    int32 total = 13;
}
